[package]
name = "bdk_dart_ffi"
description = "This is a simple wrapper crate which re-exports bdk-ffi for publishing to pub.dev"
version = "2.3.0-alpha.0"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk-dart"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["staticlib", "cdylib"]
name = "bdk_dart_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
bdk-ffi = { package = "bdk-ffi", git = "https://github.com/bitcoindevkit/bdk-ffi.git", tag = "v2.3.1" }
uniffi = { version = "=0.30.0", features = ["cli"] }
uniffi-dart = { git = "https://github.com/Uniffi-Dart/uniffi-dart", tag = "v0.1.0+v0.30.0" }
camino = "1.2"

[build-dependencies]
uniffi = { version = "=0.30.0", features = ["build"] }
uniffi-dart = { git = "https://github.com/Uniffi-Dart/uniffi-dart", tag = "v0.1.0+v0.30.0", features = [
    "build",
] }

[patch.crates-io]
uniffi = { git = "https://github.com/ethicnology/uniffi-rs", rev = "a856c48c0a32efc931c8da5a2f5d63b4447be287" }
uniffi_macros = { git = "https://github.com/ethicnology/uniffi-rs", rev = "a856c48c0a32efc931c8da5a2f5d63b4447be287" }
