[package]
name = "bdk_dart_ffi"
description = "This is a simple wrapper crate which re-exports bdk-ffi for publishing to pub.dev"
version = "1.0.0-rc.2"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk-dart"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["staticlib", "cdylib"]
name = "bdk_dart_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
bdk-ffi = { package = "bdk-ffi", git = "https://github.com/bitcoindevkit/bdk-ffi.git", tag = "v3.0.0" }
uniffi = { version = "=0.31.1", features = ["cli"] }
uniffi-dart = { git = "https://github.com/Uniffi-Dart/uniffi-dart", tag = "v0.2.0+v0.31.1" }
camino = "1.2"

[build-dependencies]
uniffi = { version = "=0.31.1", features = ["build"] }
uniffi-dart = { git = "https://github.com/Uniffi-Dart/uniffi-dart", tag = "v0.2.0+v0.31.1", features = [
    "build",
] }
