[package]
name = "bdk_dart_ffi"
description = "This is a simple wrapper crate which re-exports bdk-ffi for publishing to pub.dev"
version = "1.0.0-rc.2"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk-dart"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["staticlib", "cdylib"]
name = "bdk_dart_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
bdk-ffi = { package = "bdk-ffi", git = "https://github.com/bitcoindevkit/bdk-ffi.git", rev = "17c48b8b52ba81cdc58531e75ad1165be0cc25d9" }
uniffi = { version = "=0.31.2", features = ["cli"] }
uniffi-dart = { git = "https://github.com/Uniffi-Dart/uniffi-dart", tag = "v0.2.1+v0.31.2" }
camino = "1.2"

[build-dependencies]
uniffi = { version = "=0.31.2", features = ["build"] }
uniffi-dart = { git = "https://github.com/Uniffi-Dart/uniffi-dart", tag = "v0.2.1+v0.31.2", features = [
    "build",
] }

# Reproducible builds: force a single codegen unit. With the default (16),
# rustc partitions each crate across parallel codegen units and the resulting
# function layout in the .so is not stable across build environments, so the
# same source produces byte-diverging libraries. codegen-units = 1 removes that
# partitioning. This is pinned in the crate itself because the native-assets
# build (native_toolchain_rust) does not reliably inherit the caller's
# CARGO_PROFILE_RELEASE_CODEGEN_UNITS / CARGO_ENCODED_RUSTFLAGS environment.
[profile.release]
codegen-units = 1
